@@ -6,3 +6,4 @@
 #define PQXX_HAVE_PQPUTCOPY 1
 #define PQXX_HAVE_PQRESULTERRORFIELD 1
 #define PQXX_HAVE_PQUNESCAPEBYTEA 1
+#define PQXX_HAVE_PQFTABLE 1
