@@ -22,7 +22,7 @@ PQXX_HAVE_PQESCAPESTRING	internal	libpq
 PQXX_HAVE_PQEXECPREPARED	internal	libpq
 PQXX_HAVE_PQFREEMEM	internal	libpq
 PQXX_HAVE_PQFREENOTIFY	internal	libpq
-PQXX_HAVE_PQFTABLE	public	libpq
+PQXX_HAVE_PQFTABLE	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA	internal	libpq
