@@ -142,14 +142,36 @@ public:
 
     result::size_type num() const { return rownumber(); }		//[t1]
 
-#ifdef PQXX_HAVE_PQFTABLE
+    /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+    /** Only defined if the libpqxx library was compiled against a libpq
+     * version that supports the PQftable function.
+     *
+     * If you get a link error saying this function is undefined, that must be
+     * because libpqxx was compiled against an older version of libpq.  The
+     * PQftable function first became available in PostgreSQL 7.4.
+     */
     oid column_table(size_type ColNum) const				//[t2]
 	{ return m_Home->column_table(ColNum); }
+    /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+    /** Only defined if the libpqxx library was compiled against a libpq
+     * version that supports the PQftable function.
+     *
+     * If you get a link error saying this function is undefined, that must be
+     * because libpqxx was compiled against an older version of libpq.  The
+     * PQftable function first became available in PostgreSQL 7.4.
+     */
     oid column_table(int ColNum) const					//[t2]
 	{ return column_table(size_type(ColNum)); }
+    /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+    /** Only defined if the libpqxx library was compiled against a libpq
+     * version that supports the PQftable function.
+     *
+     * If you get a link error saying this function is undefined, that must be
+     * because libpqxx was compiled against an older version of libpq.  The
+     * PQftable function first became available in PostgreSQL 7.4.
+     */
     oid column_table(const PGSTD::string &ColName) const		//[t2]
 	{ return column_table(column_number(ColName)); }
-#endif
 
 
 #ifdef PQXX_DEPRECATED_HEADERS
@@ -229,12 +251,15 @@ public:
     /// Column type
     oid type() const { return home()->column_type(col()); } 		//[t7]
 
-#ifdef PQXX_HAVE_PQFTABLE
-    /// Table this field came from, if any
-    /** @since PostgreSQL/libpq 7.4
+    /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+    /** Only defined if the libpqxx library was compiled against a libpq
+     * version that supports the PQftable function.
+     *
+     * If you get a link error saying this function is undefined, that must be
+     * because libpqxx was compiled against an older version of libpq.  The
+     * PQftable function first became available in PostgreSQL 7.4.
      */
     oid table() const { return home()->column_table(col()); }		//[t2]
-#endif
 
     /// Read value into Obj; or leave Obj untouched and return false if null
     template<typename T> bool to(T &Obj) const				//[t3]
@@ -651,17 +676,37 @@ public:
   oid column_type(const char ColName[]) const				//[t7]
     	{ return column_type(column_number(ColName)); }
 
-#ifdef PQXX_HAVE_PQFTABLE
-  /// Table that given column was taken from, if any
+  /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+  /** Only defined if the libpqxx library was compiled against a libpq
+   * version that supports the PQftable function.
+   *
+   * If you get a link error saying this function is undefined, that must be
+   * because libpqxx was compiled against an older version of libpq.  The
+   * PQftable function first became available in PostgreSQL 7.4.
+   */
   oid column_table(tuple::size_type ColNum) const;			//[t2]
-  /// Table that given column was taken from, if any
+
+  /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+  /** Only defined if the libpqxx library was compiled against a libpq
+   * version that supports the PQftable function.
+   *
+   * If you get a link error saying this function is undefined, that must be
+   * because libpqxx was compiled against an older version of libpq.  The
+   * PQftable function first became available in PostgreSQL 7.4.
+   */
   oid column_table(int ColNum) const					//[t2]
   	{ return column_table(tuple::size_type(ColNum)); } 
 
-  /// Table that given column was taken from, if any
+  /// What table did this column come from?  Requires PostgreSQL 7.4 C API.
+  /** Only defined if the libpqxx library was compiled against a libpq
+   * version that supports the PQftable function.
+   *
+   * If you get a link error saying this function is undefined, that must be
+   * because libpqxx was compiled against an older version of libpq.  The
+   * PQftable function first became available in PostgreSQL 7.4.
+   */
   oid column_table(const PGSTD::string &ColName) const			//[t2]
     	{ return column_table(column_number(ColName)); }
-#endif
 
   /// If command was INSERT of 1 row, return oid of inserted row
   /** @return Identifier of inserted row if exactly one row was inserted, or
