@@ -5,6 +5,7 @@
  - Workaround for Visual C++ problem when issuing messages from destructors
  - Yet more workarounds for Visual C++ bugs
  - Fix situation where connection state might not be restored after failure
+ - Fix configuration problem on SunOS
 2.4.3
  - Yet more workarounds for bugs in Visual C++ .NET 2003
  - Fixes for SunC++ 5.5
